# random-balls

./: .gitignore  CMakeLists.txt  README.md  build-android.sh
lib/kirigami/: build-kirigami.sh
src/: CMakeLists.txt  main.cpp  resources.qrc
src/android/: AndroidManifest.xml
src/contents/ui/: BallEntryCard.qml  RandomBallsPage.qml  RandomBallsPageAddOverlaySheet.qml  RandomBallsPageDrawModal.qml  main.qml
